# psqlsync

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.config  sample.toml  test.py
.github/workflows/: ci.yml
src/psqlsync/: actions.py  cli.py  lib.py  manage_postgres_db.py
src/psqlsync/ghmoteqlync/: cli.py  download.py  sync.py
