[tool.poetry]
name = "psqlsync"
version = "0.1.0"
description = "Tool to create basic PostgreSQL backups and restore them from local files."
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.2"
toml = "^0.10.2"

[tool.poetry.scripts]
psqlsync = "psqlsync.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
