[tool.poetry]
name = "psqlsync"
version = "0.1.3"
description = "Tool to create basic PostgreSQL backups and restore them from local files."
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.2"
toml = "^0.10.2"
dirgh = { git = "https://github.com/tiptenbrink/dirgh.git", branch = "main", optional = true }

[tool.poetry.scripts]
psqlsync = "psqlsync.cli:run"
prep = "psqlsync.ghremote.cli:run"

[tool.poetry.extras]
dirgh = ["dirgh"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
