[tool.poetry]
name = "psqlsync"
version = "0.2.3"
description = "Tool to create basic PostgreSQL backups and restore them from local files."
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.2"
tomli = "^2.0.1"
dirgh = { version = ">= 0.2.0", optional = true }
trio = { version = ">= 0.20.0, < 0.23.0", optional = true }

[tool.poetry.scripts]
psqlsync = "psqlsync.cli:run"
prep = "psqlsync.ghremote.cli:run"

[tool.poetry.extras]
dirgh = ["dirgh", "trio"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
